# docs/swagger.json
@@ -49,6 +49,79 @@
                     }
                 }
             }
+        },
+        "/lyrics/{artist}/{song}": {
+            "get": {
+                "description": "Get lyrics from the public api https://api.lyrics.ovh/v1/%s/%s",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lyrics"
+                ],
+                "summary": "Get lyrics from an Artist and a Song",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Artist",
+                        "name": "artist",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Song",
+                        "name": "song",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SongLyrics"
+                        }
+                    },
+                    "400": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.SongLyrics": {
+            "type": "object",
+            "properties": {
+                "Artist": {
+                    "type": "string"
+                },
+                "Lyrics": {
+                    "type": "string"
+                },
+                "SongTitle": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
