# models/lyrics.go
@@ -1,0 +1,8 @@
+package models
+
+// SongLyrics : Song Lyrics model
+type SongLyrics struct {
+	Artist    string `json:"Artist"`
+	SongTitle string `json:"SongTitle"`
+	Lyrics    string `json:"Lyrics"`
+}
